[project]
name = "strandsexamples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.35.0",
    "pydantic>=2.12.5",
    "strands-agents-builder>=0.1.10",
    "strands-agents-tools>=0.2.21",
    "strands-agents[openai]>=1.27.0",
    "rich>=13.0.0",
]
